create script and conf for NIFI_LOGS_SPOOLS

--- a/PROD/CONF/PIG/pig-compress-arch.conf
+++ b/PROD/CONF/PIG/pig-compress-arch.conf
@@ -48,6 +48,7 @@ flux.source-dirs+="/PROD/ARCH/OM/TRANSACTIONS/"
 // LES LOGS
 //flux.source-dirs+="/PROD/ARCH/NIFI_BULLETINS/"
 flux.source-dirs+="/PROD/ARCH/NIFI_LOGS/"
+flux.source-dirs+="/PROD/ARCH/NIFI_LOGS/LOG_SPOOL/"
 
 //P2P
 flux.source-dirs+="/PROD/ARCH/P2P/"
