--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -779,3 +779,17 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+crontasks +=
+  {
+    instanceId = "LOAD_NIFI_LOGS_SPOOLS",
+    cron = "0 42 */1 * * ?",
+    configFile = "/PROD/CONF/NIFI_LOGS/load-it-logs-spools.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "100 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
