remove insert_into_received_files and update insert into it zte extract

--- a/PROD/CONF/CTI/load-dt-interaction-type.conf
+++ b/PROD/CONF/CTI/load-dt-interaction-type.conf
@@ -20,7 +20,7 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/insert_into_dt_interaction_type.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
