--- a/PROD/CONF/CTI/load-dt-requested-skill.conf
+++ b/PROD/CONF/CTI/load-dt-requested-skill.conf
@@ -20,7 +20,7 @@ flux.has-exec-queries = true
 flux.has-post-queries = true
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/EXP_DIM_REQUESTED_SKILL/insert_into_dt_requested_skill.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
