--- a/PROD/CONF/CTI/load-dt-user-data-cust-dim-2.conf
+++ b/PROD/CONF/CTI/load-dt-user-data-cust-dim-2.conf
@@ -21,7 +21,7 @@ flux.has-post-queries = false
 flux.exec-query.execution.mode = "JDBC"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/EXP_DIM_USER_DATA_CUST_DIM_2/insert_into_dt_user_data_cust_dim_2.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
