--- a/PROD/CONF/CTI/load-ft-irf-user-data-keys.conf
+++ b/PROD/CONF/CTI/load-ft-irf-user-data-keys.conf
@@ -20,7 +20,7 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/EXP_FACT_IRF_USER_DATA_KEYS/insert_into_ft_irf_user_data_keys.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
