--- a/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-spec-extract.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-spec-extract.conf
@@ -22,7 +22,7 @@ flux.has-post-queries = true
 flux.exec-query.execution.mode = "JDBC"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_it_prod_spec_extract.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/truncate_stream_it_prod_spec_extract.hql"
 flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_stream_it_prod_spec_extract.hql"
