--- a/PROD/CONF/OM/load-it-omny-operator-balance.conf
+++ b/PROD/CONF/OM/load-it-omny-operator-balance.conf
@@ -22,7 +22,7 @@ flux.has-post-queries = false
 flux.exec-query.execution.mode = "JDBC"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/OM/insert_into_it_omny_operator_balance.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
