--- a/PROD/CONF/CTI/load-ft-resource-group-fact.conf
+++ b/PROD/CONF/CTI/load-ft-resource-group-fact.conf
@@ -20,7 +20,7 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/EXP_FACT_RESOURCE_GROUP_FACT/insert_into_ft_resource_group_fact.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
