--- a/PROD/CONF/CTI/load-svi-appel.conf
+++ b/PROD/CONF/CTI/load-svi-appel.conf
@@ -20,7 +20,7 @@ flux.has-exec-queries = true
 flux.has-post-queries = false
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/SVI/SVI_APPEL/insert_into_svi_appel.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
