--- a/PROD/CONF/IDENTIFICATION/load-it-client-snapid-directory.conf
+++ b/PROD/CONF/IDENTIFICATION/load-it-client-snapid-directory.conf
@@ -20,7 +20,7 @@ flux.has-exec-queries = true
 flux.has-post-queries = true
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/IDENTIFICATION/IT_CLIENT_SNAPID_DIRECTORY/insert_into_it_client_snapid_directory.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
