--- a/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf
@@ -22,7 +22,7 @@ flux.has-post-queries = false
 flux.exec-query.execution.mode = "JDBC"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/IN_ZTE/DATA_POST/insert_into_it_zte_data_post.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
