--- a/PROD/CONF/MSC/load-it-cra-msc-huawei.conf
+++ b/PROD/CONF/MSC/load-it-cra-msc-huawei.conf
@@ -22,7 +22,7 @@ flux.has-post-queries = false
 flux.exec-query.execution.mode = "JDBC"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/MSC/insert_into_it_cra_msc_huawei.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/MSC/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/MSC/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
