--- a/PROD/CONF/OTARIE/IT/load-it-traffic-cust-otarie.conf
+++ b/PROD/CONF/OTARIE/IT/load-it-traffic-cust-otarie.conf
@@ -22,7 +22,7 @@ flux.has-post-queries = false
 flux.exec-query.execution.mode = "JDBC"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/OTARIE/insert_into_it_traffic_cust_otarie.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
