--- a/PROD/CONF/P2P/load-it-p2p.conf
+++ b/PROD/CONF/P2P/load-it-p2p.conf
@@ -22,7 +22,7 @@ flux.has-post-queries = false
 flux.exec-query.execution.mode = "JDBC"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/P2P/insert_into_p2p_log.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/P2P/insert_into_received_files.hql"
+//flux.exec-queries += "/PROD/SCRIPTS/IT/P2P/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
