--- a/PROD/CONF/NIFI_LOGS/load-it-logs-spools.conf
+++ b/PROD/CONF/NIFI_LOGS/load-it-logs-spools.conf
@@ -7,10 +7,10 @@ flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
 flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/NIFI_LOGS/LOG_SPOOL/Log_*"
-flux.hdfs.dest-temp-tt-dir = "/PROD/TT/NIFI_LOGS/LOG_SPOOL"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/LOG_SPOOL"
 
 flux.hdfs.move-to-arch = true
-flux.hdfs.src-arch-dir-regex = "/PROD/TT/NIFI_LOGS/LOG_SPOOL/*"
+flux.hdfs.src-arch-dir-regex = "/PROD/TT/LOG_SPOOL/*"
 flux.hdfs.dest.arch-dir = "/PROD/ARCH/NIFI_LOGS/LOG_SPOOL"
 flux.hdfs.dest.has-sub-dir = true
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
