program dola daily

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -1042,4 +1042,17 @@ crontasks +=
   }
 
 
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CBM_DOLA_DAILY",
+    cron = "0 0 12 * * ?",
+    configFile = "/DATALAB/CONF/FT_CBM_DOLA_DAILY/load-ft-cbm-dola-daily.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
