create conf and script for FT_CELL_TRAFIC_DAYLY

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -473,3 +473,17 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_CELL_TRAFIC_DAYLY",
+    cron = "0 48 */1 * * ?",
+    configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-ft-ft-cell-trafic-dayly.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
