create cript and conf for  FT_A_TRAFFIC_ENTRANT

--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -487,3 +487,17 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_A_TRAFFIC_ENTRANT",
+    cron = "0 49 */1 * * ?",
+    configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-ft_a_traffic_entrant_amn.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
