--- a/PROD/CONF/drop_it_partitions.conf
+++ b/PROD/CONF/drop_it_partitions.conf
@@ -3,11 +3,11 @@ flux.log-level = "ERROR"
 
 flux.name = "DROP_IT_PARTITIONS"
 
-flux.has-date-processing = false
+flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -7
-flux.slice-end-value = -1
+flux.slice-begin-value = -93
+flux.slice-end-value = -93
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
@@ -25,93 +25,93 @@ flux.exec-query.execution.mode = "JDBC"
 
 ////IN_ZTE
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_ADJUSTMENT DROP partition (CREATE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_ADJUSTMENT DROP partition (CREATE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_BALANCE_RESET DROP partition (BAL_RESET_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_BALANCE_RESET DROP partition (BAL_RESET_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_CHECK_FILE DROP partition (CDR_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_CHECK_FILE DROP partition (CDR_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_CHECK_FILE_ALL DROP partition (FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_CHECK_FILE_ALL DROP partition (FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_DATA DROP partition (START_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_DATA DROP partition (START_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_DATA_POST DROP partition (START_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_DATA_POST DROP partition (START_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_EMERGENCY_CREDIT DROP partition (TRANSACTION_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_EMERGENCY_CREDIT DROP partition (TRANSACTION_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_EMERGENCY_DATA DROP partition (TRANSACTION_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_EMERGENCY_DATA DROP partition (TRANSACTION_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_PRICE_PLAN_EXTRACT_TEST DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_PRICE_PLAN_EXTRACT_TEST DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-//ALTER TABLE CDR.IT_ZTE_PROD_SPEC_EXTRACT DROP partition (CREATE_DATE < DATE_SUB(current_date,93))"
+//ALTER TABLE CDR.IT_ZTE_PROD_SPEC_EXTRACT DROP partition (CREATE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_ACC_NBR_EXTRACT DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_ACC_NBR_EXTRACT DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_ACCT_EXTRACT DROP partition (ORIGINAL_FILE_DATE  < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_ACCT_EXTRACT DROP partition (ORIGINAL_FILE_DATE  < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_BAL_EXTRACT DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_BAL_EXTRACT DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_BAL_SNAP DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_BAL_SNAP DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_CUST_EXTRACT DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_CUST_EXTRACT DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_DEL_EXPBAL DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_DEL_EXPBAL DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_IPP_EXTRACT_TMP DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_IPP_EXTRACT_TMP DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_PROD_EXTRACT DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_PROD_EXTRACT DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-//ALTER TABLE CDR.IT_ZTE_PROFILE DROP partition (CREATE_DATE < DATE_SUB(current_date,93))"
+//ALTER TABLE CDR.IT_ZTE_PROFILE DROP partition (CREATE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE PAY_DATE DROP partition (CREATE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE PAY_DATE DROP partition (CREATE_DATE < '###SLICE_VALUE###')"
 
-//ALTER TABLE CDR.IT_ZTE_PRICE_PLAN_EXTRACT DROP partition (CREATE_DATE < DATE_SUB(current_date,93))"
+//ALTER TABLE CDR.IT_ZTE_PRICE_PLAN_EXTRACT DROP partition (CREATE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_SUBSCRIPTION DROP partition (CREATEDDATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_SUBSCRIPTION DROP partition (CREATEDDATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_TRANSFER  DROP partition (PAY_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_TRANSFER  DROP partition (PAY_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_VOICE_SMS DROP partition (START_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_VOICE_SMS DROP partition (START_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_VOICE_SMS_POST DROP partition (START_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZTE_VOICE_SMS_POST DROP partition (START_DATE < '###SLICE_VALUE###')"
 
 // MSC//
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_CRA_MSC_HUAWEI DROP partition (CALLDATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_CRA_MSC_HUAWEI DROP partition (CALLDATE < '###SLICE_VALUE###')"
 
 //MVAS//
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_SMSC_MVAS_A2P DROP partition (WRITE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_SMSC_MVAS_A2P DROP partition (WRITE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_SMSC_MVAS_A2P_CHECKFILES DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_SMSC_MVAS_A2P_CHECKFILES DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
 //BDI
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_BDI DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_BDI DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
 //OM
 
 
 //OTARIE
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_OM_ALL_BALANCE DROP partition (ORIGINAL_FILE_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_OM_ALL_BALANCE DROP partition (ORIGINAL_FILE_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_OM_APGL DROP partition (TRANSACTION_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_OM_APGL DROP partition (TRANSACTION_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_OM_COMMISSIONS DROP partition (TRANSACTION_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_OM_COMMISSIONS DROP partition (TRANSACTION_DATE < '###SLICE_VALUE###')"
 
 //P2P
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_P2P_LOG DROP partition (START_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_P2P_LOG DROP partition (START_DATE < '###SLICE_VALUE###')"
 
 //POKE_CALL
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_POKE_CALL DROP partition (SETUPDATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_POKE_CALL DROP partition (SETUPDATE < '###SLICE_VALUE###')"
 
 //ZEBRA
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZEBRA_TRANSAC DROP partition (TRANSACTION_DATE < DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZEBRA_TRANSAC DROP partition (TRANSACTION_DATE < '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZEBRA_CHECKFILE DROP partition (CDR_DATE< DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZEBRA_CHECKFILE DROP partition (CDR_DATE< '###SLICE_VALUE###')"
 
-flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZEBRA_MASTER DROP partition (TRANSACTION_DATE< DATE_SUB(current_date,93))"
+flux.inline.exec-queries += "ALTER TABLE CDR.IT_ZEBRA_MASTER DROP partition (TRANSACTION_DATE< '###SLICE_VALUE###')"
