reactivation de PROD dans collecte crontask

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -333,19 +333,19 @@ crontasks +=
   }
 
 // Chargement de IN ZTE EXTRACT PROD
-// crontasks +=
-//   {
-//     instanceId = "LOAD_IT_ZTE_PROD_EXTRACT",
-//     cron = "55 */30 * * * ?",
-//     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-extract.conf",
-//     taskType = "HIVE"
-//     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "60 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//     ]
-//   }
+ crontasks +=
+   {
+     instanceId = "LOAD_IT_ZTE_PROD_EXTRACT",
+     cron = "55 */30 * * * ?",
+     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-extract.conf",
+     taskType = "HIVE"
+     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+     ]
+   }
 
 // Chargement de IN ZTE EXTRACT SUBS
 crontasks +=
