--- a/PROD/CONF/ZSMART/load-it-service.conf
+++ b/PROD/CONF/ZSMART/load-it-service.conf
@@ -18,7 +18,7 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = true
-
+flux.exec-query.execution.mode = "JDBC"
 flux.exec-queries += "/PROD/SCRIPTS/IT/ZSMART/insert_into_it_service.hql"
 //flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
