sbo mise en prod

--- a/PROD/CONF/STREAMING/stream-calc-subs-for-specific-acc.conf
+++ b/PROD/CONF/STREAMING/stream-calc-subs-for-specific-acc.conf
@@ -68,7 +68,7 @@ flux.stream-query = "/PROD/SCRIPTS/STREAMING/earliest-stream-calc-subs-for-speci
 flux.stream-query-name = "STREAMING_CALC_SUBS_FOR_SPECIFIC_ACC"
 flux.kafka.output-topic="in-zte-sbo-subs-count"
 flux.kafka.key-expression = "CAST(concat(START_DATE,'', END_DATE) AS STRING) AS key"
-flux.kafka.value-expression = "CAST(CONCAT(acc_nbr,';',subscount,';',START_DATE,';', END_DATE) AS STRING) AS value"
+flux.kafka.value-expression = "CAST(CONCAT(acc_nbr,';',benefit_name,';',subscount,';',START_DATE,';', END_DATE) AS STRING) AS value"
 
 flux.jdbc.output-url = "jdbc:mysql://172.21.66.236/monitoring_streaming?allowMultiQueries=true&useUnicode=true&serverTimezone=UTC"
 flux.jdbc.output-username = "user_mon"
