add revenue summary conf

--- a/PROD/CONF/ZEBRA/FT/load-ft-refill.conf
+++ b/PROD/CONF/ZEBRA/FT/load-ft-refill.conf
@@ -28,7 +28,7 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/ZEBRA/compute_and_insert_into_ft_refill.h
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_refill_activity.hql"
-//flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_refill.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_refill.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
