edit DT_BASE_IDENTIFICATION and collect cron task for IT_OMNY_SERVICES_CHARGES_DETAILS

--- a/PROD/CONF/collect-zsmart-cron-tasks.conf
+++ b/PROD/CONF/collect-zsmart-cron-tasks.conf
@@ -245,3 +245,19 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
+
+/////////////////////////////////ORANGE MONEY ////////////////////////
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_OMNY_SERVICES_CHARGES_DETAILS",
+    cron = "30 25 */1 * * ?",
+    configFile = "/PROD/CONF/OM/load_it_omny_services_charges_details.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "40 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
