--- a/PROD/CONF/OM/load-it-om-transactions.conf
+++ b/PROD/CONF/OM/load-it-om-transactions.conf
@@ -28,8 +28,8 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=7"
-flux.hive.extra-conf += "--hivevar cdr_type=OM_TRANSACTIONS"
+flux.hive.extra-conf += "--hivevar cdr_type=OMNY_TRANSACTIONS"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_OM_TRANSACTIONS"
+flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_OMNY_TRANSACTIONS"
 
 
