--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -1043,19 +1043,19 @@ crontasks +=
 
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_MARKETING_DATAMART",
-    cron = "0 53 */1 * * ?",
-    configFile = "/PROD/CONF/DATAMART/load-ft-marketing-datamart.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+ // {
+ //   instanceId = "LOAD_FT_MARKETING_DATAMART",
+ //   cron = "0 53 */1 * * ?",
+ //   configFile = "/PROD/CONF/DATAMART/load-ft-marketing-datamart.conf",
+  //  taskType = "HIVE"
+  //  taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+  //  timeout = "60 minutes"
+  //  extraTaskParams : [
+  //    {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+   //   , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+   // ]
+  //}
 
 
 // crontasks +=
