mise en prod de la collect spark pour price plan

--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -19,12 +19,12 @@ cronmanagerId = "003"
 //--###**************************************#####---
 
 
-// Chargement FT_A IN ZTE SUBCRIPTION
+// Chargement LOAD_SPARK_IT_ZTE_PRICE_PLAN_EXTRACT
 crontasks +=
   {
-    instanceId = "STREAMING_PROD01_CALC_FT_A_SUBS",
+    instanceId = "LOAD_SPARK_IT_ZTE_PRICE_PLAN_EXTRACT",
     cron = "0 */5 * * * ?",
-    configFile = "/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-price-plan-extract.conf",
     taskType = "BATCH"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "0 minutes"
