--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -23,11 +23,11 @@ cronmanagerId = "003"
 crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_ZTE_PRICE_PLAN_EXTRACT",
-    cron = "0 */5 * * * ?",
+    cron = "55 5-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-price-plan-extract.conf",
     taskType = "BATCH"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
-    timeout = "0 minutes"
+    timeout = "60 minutes"
     extraTaskParams : [
       {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
