collect msc en mode batch

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -413,19 +413,19 @@ crontasks +=
 ////////////////////////////////////////////////////
 
 // Chargement de IT MSC
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CRA_MSC_HUAWEI",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/MSC/load-it-cra-msc-huawei.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "120 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_CRA_MSC_HUAWEI",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/MSC/load-it-cra-msc-huawei.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "120 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
