collect msc en mode batch

--- a/PROD/CONF/MSC/load-spark-it-cra-msc-huawei.conf
+++ b/PROD/CONF/MSC/load-spark-it-cra-msc-huawei.conf
@@ -22,15 +22,23 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 flux.exec-query.execution.mode = "JDBC"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/MSC/insert_into_spark_it_cra_msc_huawei.hql"
 
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-flux.hive.extra-conf += "--hivevar date_offset=3"
+//flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
+//flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
+//flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+//flux.hive.extra-conf += "--hivevar date_offset=3"
 //flux.hive.extra-conf += "--hivevar cdr_type=CRA_MSC_HUAWEI"
 //flux.hive.extra-conf += "--hivevar file_date_index=9"
 //flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_CRA_MSC_HUAWEI"
