--- a/PROD/CONF/MVAS/load-spark-it-smsc-mvas-a2p.conf
+++ b/PROD/CONF/MVAS/load-spark-it-smsc-mvas-a2p.conf
@@ -16,6 +16,15 @@ flux.hdfs.move-to-tt = true
 flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/MVAS/MVAS_DATA/merged_*"
 flux.hdfs.dest-temp-tt-dir = "/PROD/TT/MVAS/MVAS_DATA"
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
+
 flux.hdfs.move-to-arch = true
 flux.hdfs.src-arch-dir-regex = "/PROD/TT/MVAS/MVAS_DATA/*"
 flux.hdfs.dest.arch-dir = "/PROD/ARCH/MVAS"
@@ -31,12 +40,12 @@ flux.exec-query.execution.mode = "JDBC"
 flux.exec-queries += "/PROD/SCRIPTS/IT/MVAS/insert_into_spark_it_smsc_mvas_a2p.hql"
 
 
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.vectorized.execution.enabled=false"
-flux.hive.extra-conf += "--hiveconf hive.vectorized.execution.reduce.enabled=false"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-flux.hive.extra-conf += "--hivevar date_offset=6"
-flux.hive.extra-conf += "--hivevar cdr_type=SMSC_MVAS"
-flux.hive.extra-conf += "--hivevar file_date_index=4"
-flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_SMSC_MVAS_A2P"
+//flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
+//flux.hive.extra-conf += "--hiveconf hive.vectorized.execution.enabled=false"
+//flux.hive.extra-conf += "--hiveconf hive.vectorized.execution.reduce.enabled=false"
+//flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
+//flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+//flux.hive.extra-conf += "--hivevar date_offset=6"
+//flux.hive.extra-conf += "--hivevar cdr_type=SMSC_MVAS"
+//flux.hive.extra-conf += "--hivevar file_date_index=4"
+//flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_SMSC_MVAS_A2P"
