update du script it price plan

--- a/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-price-plan-extract.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-price-plan-extract.conf
@@ -32,14 +32,21 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
+flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
+flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
+flux.inline.exec-queries += "set hive.exec.parallel=true"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
+flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
+flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
+flux.inline.exec-queries += "SET hive.enforce.sorting=false"
+
 flux.exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_spark_it_price_plan_extract.hql"
 
 flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/truncate_stream_it_price_plan_extract.hql"
 flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_stream_it_price_plan_extract.hql"
 
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
+
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_PRICE_PLAN_EXTRACT"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
