--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -52,7 +52,7 @@ crontasks +=
   {
     instanceId = "LOAD_SPARK_IT_SMSC_MVAS_A2P",
     cron = "30 */20 * * * ?",
-    configFile = "/PROD/CONF/MVAS/load-spark-it-smsc-mvas-a2p.conf",
+    configFile = "/PROD/CONF/MVAS/",
     taskType = "BATCH"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
