bascule de tous les extract

--- a/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-ipp-extract.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-ipp-extract.conf
@@ -1,7 +1,5 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
-
-
 flux.input-type = "HIVE" // Possible values are HDFS, HIVE
 flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
 
@@ -14,17 +12,17 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 
-flux.name = "LOAD_SPARK_IT_ZTE_PRICE_PLAN_EXTRACT"
+flux.name = "LOAD_SPARK_IT_ZTE_IPP_EXTRACT"
 
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/IN_ZTE/PRICE_PLAN_EXTRACT/Data_*"
-flux.hdfs.dest-temp-tt-dir = "/PROD/TT/IN_ZTE/EXTRACT_PRICE_PLAN/"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/IN_ZTE/IPP_EXTRACT/IPP_*"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/IN_ZTE/EXTRACT_IPP/"
 
 flux.hdfs.move-to-arch = true
-flux.hdfs.src-arch-dir-regex = "/PROD/TT/IN_ZTE/EXTRACT_PRICE_PLAN/*"
-flux.hdfs.dest.arch-dir = "/PROD/ARCH/IN_ZTE/EXTRACT_PRICE_PLAN/"
+flux.hdfs.src-arch-dir-regex = "/PROD/TT/IN_ZTE/EXTRACT_IPP/*"
+flux.hdfs.dest.arch-dir = "/PROD/ARCH/IN_ZTE/EXTRACT_IPP/"
 flux.hdfs.dest.has-sub-dir = true
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
@@ -40,14 +38,14 @@ flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
+"
 
-flux.exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_spark_spark_it_price_plan_extract.hql"
+flux.exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_spark_it_zte_ipp_extract.hql"
 
-flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/truncate_stream_it_price_plan_extract.hql"
-flux.post-exec-queries +="/PROD/SCRIPTS/IT/IN_ZTE/EXTRACT/insert_into_spark_stream_it_price_plan_extract.hql"
-
-
+flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
+flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
+flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=3"
-flux.hive.extra-conf += "--hivevar cdr_type=ZTE_PRICE_PLAN_EXTRACT"
+flux.hive.extra-conf += "--hivevar cdr_type=ZTE_IPP_EXTRACT"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_ZTE_PRICE_PLAN_EXTRACT"
+flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_ZTE_IPP_EXTRACT"
