--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -28,7 +28,236 @@ crontasks +=
     taskType = "BATCH"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
-    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_IT_ZTE_ACC_NBR_EXTRACT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZTE_ACC_NBR_EXTRACT",
+    cron = "55 */10 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-acc-nbr-extract.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_IT_ZTE_ACCT_EXTRACT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZTE_ACCT_EXTRACT",
+    cron = "55 15-59/10 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-acct-extract.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_IT_ZTE_BAL_EXTRACT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZTE_BAL_EXTRACT",
+    cron = "55 20-59/30 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-bal-extract.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_IT_ZTE_BAL_SNAP
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZTE_BAL_SNAP",
+    cron = "55 20-59/30 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-bal-snap.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_IT_ZTE_CUST_EXTRACT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZTE_CUST_EXTRACT",
+    cron = "55 25-59/30 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-cust-extract.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_IT_ZTE_DEL_EXPBAL
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZTE_DEL_EXPBAL",
+    cron = "55 15-59/30 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-del-expbal.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_IT_ZTE_IPP_EXTRACT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZTE_IPP_EXTRACT",
+    cron = "35 5-59/30 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-ipp-extract.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_IT_ZTE_PROD_EXTRACT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZTE_PROD_EXTRACT",
+    cron = "55 */30 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-prod-extract.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_IT_ZTE_PROD_SPEC_EXTRACT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZTE_PROD_SPEC_EXTRACT",
+    cron = "55 */30 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-prod-spec-extract.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+// Chargement LOAD_SPARK_IT_ZTE_SUBS_EXTRACT
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_IT_ZTE_SUBS_EXTRACT",
+    cron = "55 5-59/30 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/load-spark-it-zte-subs-extract.conf",
+    taskType = "BATCH"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
     extraTaskParams : [
       {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
