compute msc en mode batch

--- a/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf
+++ b/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf
@@ -5,6 +5,7 @@ flux.input-type = "HIVE"
 flux.output-type = "HIVE"
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.name = "LOAD_SPARK_FT_MSC_TRANSACTION"
 
 flux.has-date-processing = true
