compute msc en mode batch

--- a/PROD/CONF/MSC/load-ft-msc-transaction.conf
+++ b/PROD/CONF/MSC/load-ft-msc-transaction.conf
@@ -19,7 +19,7 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
-flux.inline.pre-exec-queries += "SELECT IF(FT_EXISTS>0,'NOK','OK') FROM (SELECT COUNT(*) FT_EXISTS FROM MON.FT_MSC_TRANSACTION WHERE TRANSACTION_DATE = '###SLICE_VALUE###')T"
+flux.inline.pre-exec-queries += "SELECT IF(FT_EXISTS>0,'NOK','OK') FROM (SELECT COUNT(*) FT_EXISTS FROM MON.SPARK_FT_MSC_TRANSACTION WHERE TRANSACTION_DATE = '###SLICE_VALUE###')T"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/MSC/prequery_completude.hql"
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
