compute msc en mode batch

--- a/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf
+++ b/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf
@@ -24,8 +24,8 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
-flux.inline.pre-exec-queries += "SELECT IF(FT_EXISTS>0,'NOK','OK') FROM (SELECT COUNT(*) FT_EXISTS FROM MON.FT_MSC_TRANSACTION WHERE TRANSACTION_DATE = '###SLICE_VALUE###')T"
-flux.pre-exec-queries += "/PROD/SCRIPTS/FT/MSC/prequery_completude.hql"
+flux.inline.pre-exec-queries += "SELECT IF(FT_EXISTS>0,'NOK','OK') FROM (SELECT COUNT(*) FT_EXISTS FROM MON.SPARK_FT_MSC_TRANSACTION WHERE TRANSACTION_DATE = '###SLICE_VALUE###')T"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/MSC/prequery_spark_completude.hql"
 
 
 flux.inline.exec-queries += "set  hive.exec.dynamic.partition=true"
@@ -45,7 +45,7 @@ flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_CALLER_SUBR as 'cm
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_PARTNER_ID as 'cm.orange.bigdata.udf.HuaPartnerId'"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_HUA_PARTNER_GT as 'cm.orange.bigdata.udf.HuaPartnerGt'"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
-flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/compute_and_insert_into_ft_msc_transaction.hql"
+flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/compute_and_insert_into_spark_ft_msc_transaction.hql"
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 
@@ -55,5 +55,5 @@ flux.hive.extra-conf += "--hivevar date_offset=90"
 flux.hive.extra-conf += "--hivevar table_type=FT"
 flux.hive.extra-conf += "--hivevar table_name=FT_MSC_TRANSACTION"
 flux.hive.extra-conf += "--hivevar insert_date_column=ft_insert_date"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_MSC_TRANSACTION"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.SPARK_FT_MSC_TRANSACTION"
 flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
