SPARK MVAS,PARC

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -42,3 +42,21 @@ crontasks +=
     ]
   }
 
+
+//--###**************************************#####---
+//--###        CALCULS MVAS
+//--###**************************************#####---
+// FT MVAS
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_SMSC_TRANSACTION_A2P",
+    cron = "0 43 */1 * * ?",
+    configFile = "/PROD/CONF/MVAS/load-spark-ft-smsc-transaction-a2p.conf",
+    taskType = "HIVE"
+    taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
