--- a/PROD/CONF/MVAS/load-spark-it-smsc-mvas-a2p.conf
+++ b/PROD/CONF/MVAS/load-spark-it-smsc-mvas-a2p.conf
@@ -1,12 +1,17 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.input-type = "HIVE" // Possible values are HDFS, HIVE
-flux.output-type = "HIVE" // Possible values are HDFS, HIVE, JDBC
-flux.spark.setup-conf = []
-flux.setup-conf = []
-flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+flux.input-type = "HIVE"
+flux.output-type = "HIVE"
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
+flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+
+//VARIABLE
+flux.spark.setup-var +=  {"key": "date_offset","value": 6}
+flux.spark.setup-var +=  {"key": "cdr_type","value": "SMSC_MVAS"}
+flux.spark.setup-var +=  {"key": "file_date_index","value": 4}
+flux.spark.setup-var +=  {"key": "tt_table_name","value": "CDR.TT_SMSC_MVAS_A2P"}
+
 
 flux.name = "LOAD_SPARK_IT_SMSC_MVAS_A2P"
 
@@ -40,12 +45,4 @@ flux.exec-query.execution.mode = "JDBC"
 flux.exec-queries += "/PROD/SCRIPTS/IT/MVAS/insert_into_spark_it_smsc_mvas_a2p.hql"
 
 
-//flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
-//flux.hive.extra-conf += "--hiveconf hive.vectorized.execution.enabled=false"
-//flux.hive.extra-conf += "--hiveconf hive.vectorized.execution.reduce.enabled=false"
-//flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
-//flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-//flux.hive.extra-conf += "--hivevar date_offset=6"
-//flux.hive.extra-conf += "--hivevar cdr_type=SMSC_MVAS"
-//flux.hive.extra-conf += "--hivevar file_date_index=4"
 //flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_SMSC_MVAS_A2P"
