bascule vers le mode batch

--- a/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf
+++ b/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
@@ -7,6 +6,12 @@ flux.output-type = "HIVE"
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
+
+flux.spark.setup-var +=  {"key": "date_offset","value": "90"}
+flux.spark.setup-var +=  {"key": "table_type","value": "FT"}
+flux.spark.setup-var +=  {"key": "table_name","value": "FT_MSC_TRANSACTION"}
+flux.spark.setup-var +=  {"key": "database_table_name","value": "MON.SPARK_FT_MSC_TRANSACTION"}
+flux.spark.setup-var +=  {"key": "table_partition","value": "TRANSACTION_DATE"}
 flux.name = "LOAD_SPARK_FT_MSC_TRANSACTION"
 
 flux.has-date-processing = true
@@ -52,9 +57,3 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/compute_and_insert_into_spark_ft_msc_
 
 // Prequery variables
 
-flux.hive.extra-conf += "--hivevar date_offset=90"
-flux.hive.extra-conf += "--hivevar table_type=FT"
-flux.hive.extra-conf += "--hivevar table_name=FT_MSC_TRANSACTION"
-flux.hive.extra-conf += "--hivevar insert_date_column=ft_insert_date"
-flux.hive.extra-conf += "--hivevar database_table_name=MON.SPARK_FT_MSC_TRANSACTION"
-flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
