correction de l'erreur dans compute ft data (date fixé en dur)

--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-data.conf
@@ -51,7 +51,7 @@ flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
 
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
-flux.inline.exec-queries += "DROP  FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
+flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_spark_ft_cra_gprs.hql"
 
